# lx-ai

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  compare_buckets.py  devenv.nix  pyproject.toml  quries.md
.github/workflows/: ci.yml
diagram/: ai.mmd  evaluation_phase.mmd  label_space.mmd  lx_ai.mmd  lx_ai_layered_system_view.mmd  split.mmd  training_architecture.mmd  training_phase.mmd
docs/: index.md
lx_ai/: run_training.py
lx_ai/ai_model/: losses.py  model_backbones.py  model_gastronet_resnet.py
lx_ai/ai_model_config/: config.py  train_sandbox_postgres.yaml
lx_ai/ai_model_dataset/: dataset.py
lx_ai/ai_model_matrics/: metrics.py
lx_ai/ai_model_split/: bucket_hash.py  bucket_integrity_checker.py  bucket_splitter.py  split_sanity_checker.py
lx_ai/ai_model_training/: trainer_gastronet_multilabel.py
lx_ai/data_validation/: __init__.py  distribution_report.py
lx_ai/training/: bucket_logic.py  bucket_snapshot.py
lx_ai/utils/: bucket_utils.py  data_accumulation.py  data_loader_for_model_input.py  data_loader_for_model_training.py  db_loader_for_model_input.py  logging_utils.py
tests/ai_model_config/: test_training_config.py
tests/ai_model_dataset/: test_multilabel_dataset_spec.py  test_torch_dataset_smoke.py
tests/ai_model_metrics/: test_metrics.py
tests/ai_model_training/: test_trainer_smoke.py
tests/integration/: test_end_to_end_small_run.py
